Added report Preview

--- a/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/MyAccount/PatientAccountLayout.razor
@@ -5,9 +5,10 @@
 
 
 <UserLayout>
-    <div class="page">
-        <div class="sidebar sidebar-sub">
+     <div class="page">
+        <div class="sidebar">
             <Patient.Api.Client.Layout.MyAccount.SideAccountMenu />
+                        
         </div>
         <main>
 
@@ -16,8 +17,8 @@
             </article>
         </main>
         
-    </div>>
-    
+    </div>
+         
 </UserLayout>   
     
 
