--- a/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/PatientMenu.razor
@@ -57,7 +57,7 @@
         </div>
         <div class="col d-flex d-flex-column justify-content-center align-items-center" >
             <div class="dropdown">
-                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                     <div class="myaccount-icon">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -69,6 +69,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <li><a class="Moje Konto" href="/pacjent/konto">Moje konto</a></li>
                     <li><a class="Dokumentacja medyczna" href="/pacjent/dokumentacja-medyczna">Dokumentacja</a></li>
+                    <li><a class="Wyloguj się" href="#">Wyloguj sie</a></li>
                 </ul>
             </div>
         </div>
