--- a/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor
+++ b/Patient.Api/Patient.Api.Client/Layout/UserLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         
-        <article class="content justify-content-center">
+        <article class="content">
             @Body
             <div>
                 @ChildContent
