--- a/Patient.Api/Patient.Api/Components/Layout/UserLayout.razor.css
+++ b/Patient.Api/Patient.Api/Components/Layout/UserLayout.razor.css
@@ -55,7 +55,7 @@ main {
     .sidebar {
         width: 100vw;
         height: 100px;
-        position: sticky;
+        position: static;
         top: 0;
     }
 
