--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Home.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Home.razor
@@ -11,6 +11,8 @@
 @page "/pacjent"
 
 <h3> Panel Pacjenta </h3>
+<h2> Na prawo - Rekomendacje: Otrzymano nową rekomendacje </h2>
+
 
 
 
@@ -20,7 +22,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-
 
 
 
