--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Home.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Home.razor
@@ -1,4 +1,4 @@
-﻿@layout Patient.Api.Components.Layout.UserLayout
+﻿@layout Patient.Api.Components.Layout.Doctor.DoctorLayout
 
 @using Patient.Domain.Constants
 
@@ -19,11 +19,5 @@
 
     }
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-
-        }
-    }
+    
 }
