--- a/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/Reports.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/DoctorPages/Reports/Reports.razor
@@ -1,6 +1,6 @@
-﻿@layout Patient.Api.Client.Layout.UserLayout
+﻿@layout Patient.Api.Components.Layout.Doctor.DoctorLayout
 
-@page "/pacjent/raporty"
+@page "/lekarz/raporty"
 
 @rendermode @(new InteractiveServerRenderMode(false))
 
@@ -10,7 +10,7 @@
 @using Patient.Domain.Entities
 
 
-@inject IPatientApiService _patientApiService
+@inject IDoctorApiService _doctorApiService
 @inject NavigationManager _navigationManager
 
 <div class="page-background">
@@ -18,9 +18,7 @@
     <div class="container px-4">
         <div class="row pt-5">
             <div class="col d-flex justify-content-center align-items-center">
-                <NavLink class="btn btn-primary" href="/pacjent/dodaj-raport">
-                    Zloz raport tutaj
-                </NavLink>
+                
             </div>
             <div class="col-4 d-flex d-flex-column justify-content-center align-items-center">
             </div>
@@ -62,9 +60,8 @@
 
 @code {
 
-
     private int maxFiles = 5;
-    private List<ReportToShowToPatientDto> reportsToShow = new();
+    private List<ReportToShowToDoctorDto> reportsToShow = new();
     private bool filesGet;
     private bool readingReports;
 
@@ -74,10 +71,10 @@
     protected async override Task OnInitializedAsync()
     {
         readingReports = true;
-        var response = await _patientApiService.SendRequestGetReports();
+        var response = await _doctorApiService.SendRequestGetReports();
         if (response.StatusCode == System.Net.HttpStatusCode.OK)
         {
-            reportsToShow = await response.Content.ReadFromJsonAsync<List<ReportToShowToPatientDto>>();
+            reportsToShow = await response.Content.ReadFromJsonAsync<List<ReportToShowToDoctorDto>>();
             if (reportsToShow.Count > 0) { filesGet = true; }
             StateHasChanged();
         }
@@ -85,9 +82,9 @@
 
     }
 
-    private async void HandleShowReportPreview(ReportToShowToPatientDto report)
+    private async void HandleShowReportPreview(ReportToShowToDoctorDto report)
     {
-        _navigationManager.NavigateTo($"/pacjent/raporty/{report.Id}");
+        _navigationManager.NavigateTo($"/lekarz/raporty/{report.Id}");
     }
 
 }
