--- a/Patient.Api/Patient.Api/Components/Layout/NavMenu.razor
+++ b/Patient.Api/Patient.Api/Components/Layout/NavMenu.razor
@@ -10,17 +10,17 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="logowaniePacjent">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Pacjent
+                <span class="" aria-hidden="true"></span> Pacjent
             </NavLink> 
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="logowanieLekarz">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Lekarz
+                <span class="" aria-hidden="true"></span> Lekarz
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="rejestracja">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Rejestracja
+                <span class="" aria-hidden="true"></span> Rejestracja
             </NavLink>
         </div>
 
