--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AddMedicalDocumention.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/AddMedicalDocumention.razor
@@ -5,6 +5,7 @@
 @using Patient.Domain.Entities.DTOs
 @using Patient.Api.Components.Pages.PatientPages.MedicalDocumentation.Additional
 @using Patient.Domain.Interfaces
+@using Patient.Domain.Entities.DTOs.MedicalFiles
 
 @inject IPatientApiService _patientApiService
 
