--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/MedicalDocumentation.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/MedicalDocumentation/MedicalDocumentation.razor
@@ -3,6 +3,7 @@
 @using Patient.Domain.Interfaces
 @using Patient.Domain.Entities.DTOs
 @using System.Net.Http 
+@using Patient.Domain.Entities.DTOs.MedicalFiles
 
 @inject NavigationManager navigationManager 
 @inject IPatientApiService _patientApiService
