--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/ReportPreview.razor
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/ReportPreview.razor
@@ -6,6 +6,7 @@
 @using Patient.Domain.Entities.DTOs
 @using Patient.Domain.Entities
 @using Patient.Domain.Constants
+@using Patient.Domain.Entities.DTOs.Reports
 
 @inject IPatientApiService _patientApiService
 @inject IBlobStorageService _blobStorageService
