--- a/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor.css
+++ b/Patient.Api/Patient.Api/Components/Pages/PatientPages/Reports/Reports.razor.css
@@ -4,13 +4,18 @@
     background-image: linear-gradient(45deg, rgb(0,123,255,0.5) 0%, rgb(144, 238, 144,0.5)80%);
 }
 
-.container{
+.container {
     background-color: white;
-    
 }
 
-.d-flex-column{
+.d-flex-column {
+    display: flex;
     flex-direction: column;
+}
+
+.d-flex-row {
+    display: flex;
+    flex-direction: row;
 }
 
 .widget-list {
